Fixed an issue with the registry key not being deleted once disabled. Fixed an issue with the KeyExists and KeyVaries methods not working correctly. Removed VB Tests project. Renamed CSharp Tests project.

--- a/BootMeUp.Tests/MainForm.resx
+++ b/BootMeUp.Tests/MainForm.resx
@@ -418,63 +418,21 @@
         nSH/LQAAgXFP+P8BxBj+K/0kgokAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABGdBTUEAALGPC/xhBQAACytJREFUeF7t
-        XQmMHEcVXe77Evd9nwIEhCskkM3O9DgmSrjkAIEECOIIipBCSCIgCSbclxBGMTIiBEIQMNvd48Xk4JAI
-        SZBs2ZxJMMFZO4l3u3rWOImcxGts7y7v9/w1s7W/e7q6a2ane+ZJT15P16/f/1cfv6p+VY8MOpyJPU9z
-        PHUxeFPVC2+o+FMv4kOJqPjhJ6uemqm66h+QPWd0U/AEPjREFlT85tFw5M/h1IPgQhtvXFO/+cFcTATJ
-        otycJneg6gU/c3x1HBcbohPWrl24P+6CU+G8bZozNQYXsMgyjP5h4YEVL/ibLHeE2yte+G4WGSIOVT84
-        W3CexNnj69MvZrElMKhjHo3/RhYbQgIc1BAcF8drRxYW7seiEcbqu5+O3/dp5eLpqw+x6BAScHV/VXRc
-        DCue+gSLRjBs0AXHDV7LokNIcLzwZMlxCaQX/p1tlMrEcbZTcDDwQEj7eDgKz3bRgVbpeMGfWO0QSYCz
-        tuvO6wYR/n6bVQ6RBFy5P5QcaJ2uOoVVDpEEOOos0YGWOdZQr2eVg4uK23zl2HjzTSdtCh7OPy0BoqyX
-        wllKd16XuGPUm3oGqz6C1XX1xIobvB0R2xejsFgLrUsDXPlntjnjUNUN/4p/1zue+iA1RM0PX47/h21l
-        esFbqXMIx5+O8/kB/v9P7TiF1uexCeUB3REw/C7d2IJwZvSyXQ9lU8qBiqs+IBhaGCLQOI1NKQdg1Gbd
-        yIJxM5tSfNQawVGCgYUj3iWvY5OKDRizXjfOIicRLHh4P23A378Ad7Qds0tfXcomFRf0MoQx6Udf03E+
-        agR3+tWsZgmqG8NXVN1goyCXl/cVfuyrVg+fKxiWh/sdN3wvV58IDiRmNfk83HfUhoUHcfXFheOqqwTj
-        snCOOmxcbSrgTnkX5GwMVh5w3OD9XG2xsfqqHQ+p+OoLZJRmpCm/x1Uagd8vUn3p6Kvram7wEq6uPCCj
-        EKn8UTS6Mw9UJppP5qqMQFkrkNcTJVKQOrLBR0s7dBIBxlXd8AwYvHe5AxJ5DdeQCbjKfy/UGUvHU+Or
-        vD1PZfHygyIkyRFxxJ11IYtmAhx8sVRvHI+u734Yiw4GVtVnXiA5Ip54dOQAzb3L9cqsXR4+gkUHA1Wv
-        +TzJEXFEdPUpFs2Eihd+Rqo3jsdM7HkUiw4GaJ5BckQsXfV9Fs0E3CGXifXGc121fudjWLy8qNaDZ8G5
-        mwQHdOLtWaOdNfWFB0A+y6SXivoeZYyyaMgBBq4F97cZbMSKH7yPqzMCHlcfluoz4J9rbvgGrq74qNTV
-        y2BUh1zdVLzDtC9CoSv6E1NCXaY8iMfsp7na4oISn2HMHZpxebg57bKCmh8+CeVtXAiLnCt834ScJxiW
-        i3hB76q6wSpWIcJx1VtR9jZdNi9rG6efySp6BLzAWhNKzWos/eDYE399++NYoiNgiM2rtI3hDbQQBw10
-        PJ0z3jEncHjbNX1sUu+A5+Qv5ZNZxhmKmFgsEajzdEG+cEw77G8NuPqNOmt4bHyORRNBo70o3+v0Htts
-        9nxyqpUcJp5MHF0W7YiKF3xZkC8OffUNNqV3MB1eAG9h0Y6glyHKH9Lki8K5sUbz+WxK7wDFl2sn0omH
-        41JCJaDBfaEOIjXUX/By/pX2ey94uHUhRmmjNEQvzf9fySb0FlC8VTuRjhzzgteweEdEwyYto28Fr6SF
-        m+grjI3WZx7JRUYcX53fXn+XOUfz7qw6Ag2zUP6x4wcfx/FLHC/4Cq1Z4cMZgLCVKkFlswgJaV13ukWN
-        NHHkqXv4RFNTNygONL+A8uvA6G6IW7BJqLrq3MX6u0n0VS5ild1Ba0mx+pGmeN5xg+92ihBOaKjnaHKp
-        mGbRC60ZjzpzS2VnKF2HiywBLqh3aGW7Q1d9k1XaBw1R4I6gRfaycjyOknZAGGuo1YJMR8J5v+UqloEv
-        EBpQjHuZz1DGOxc/AopohLLWCX9tYZV2ERneSqUXFbfxbjzCTmWxCNGaPj/4CI4Zvz+Y99IjUs/KoDUW
-        KYfZpx135oUsFgG/Xa+V6RYPWZ+IosaAQ4yWgFX88Kf04sLflOJpMZEs+F11XI22hlhUsPx4HMMpmtIl
-        e3iY3mZyWyKd8aAWOdIGojvDV5dKiopGPD52U6PQunHpeAIn8Y5y/j/Wpura8URSvhi7Mz/wojSauC8A
-        b1nVMFtfSAOK7I4IvKy6qZeLpR/+hkXzAxWaduT6nojaLpJ+l0hBDLtiCfBIfo9UXqSrPBbLD7yM3ykq
-        KSgp6qFhffydYvg8vAsdyqewK5YhTUBB+igZnEXsABWX5S7Z1z5e1JqTiXJyxTl4mifnoiKosVBO2moD
-        9YUbTEYYjECpKkKnq3hE6M0mLUErLze4AGXaZ/+upoCGi8SCMkZQ9jDLNPG++BLtFsSHuwfHmz6mTXER
-        WWdTYhGF9+NhhaYITOYlqDNc84K30JwM/9Qb8PiVZGy/MyjlXog8dLJFMLifOU99CDahfKDhCxh5n2Z0
-        35IGPfnUywl6wVM4KBnfj4zSNMsMxws/KxmegbQmbyvNF1D6Jj1WaKe3ihd8jDpjOHZ3W9k8/Hsp82YJ
-        nFA8rRmchRPSkHg7aKkzGuYclP2PJmtMyqniassFGrWUDDbgfsdXa7i6VOBxo2u1ekz5E66u2KCrlHqb
-        CHdPw9X6dRh2o2aoCQ/qg3RpEU3N+uo6oc60vId6zrQtOPUzkoZD+gbRTs2LG2pF20gE/4Yh9jqCrjqT
-        VWUC9SMsjxbQo5DuvPU0ok3Ty6yqP4CTMl39Y8JtNl6sRiOs5lwyzrXiwAnlXXAfTz98G6vJBZ4su1nU
-        YYN+cDarWnmIJ2iHe23u3YE7+UJBhxVSSM9qVh7SCdph2GAVVsCfiBD05OeANIhaxyqsgDfCl/Tk5kA0
-        iNUJfoCzE0VdeTkod8glrMIKotxdWU9uDkqDWM3qRk//OEGHFQ5Kg+y3uadHN1NA+61BjLPS05I6dKwm
-        F3j586RevzW66ixWtfKgtXziSdqgr/5FzmRVmcHrKWQd+TlJucKsqj8Q7Ybghmeg8/UtyrZDH8LG7gQR
-        80ZbvJRhj15vRt4LbsX76Me4K86l9eaF2eY7Sirzg2Np4ijniOt81kdXNEvZ2lRfqjcN98L559fc8CRa
-        BVyaCStqGMFYEx6mSSeuLhV4E7JlXxMw5HqurmRoLUnbqRmbhddT43KtIkYbux5LSWcoS48XqY707KCr
-        0KARUdHobETEFH6HohvwFFpLyMumrwH/21YuD7fxqZcTtJoVRpp+Om4FuXQ1V+lAS4xhqP5B3j6m3dHm
-        vkIr4cBeKNwrUv+FTSgXEnZJ6HfO0npHNqMcoD1tBUMLQ4TbN5Vm42JEVvSZucLk8yYw00b7fQX+WEqe
-        fKx+4rythIsVA/cLJOOKysBkd6G+Awy4WjOo8Cz0Cz4aVBSMKjC393zpmW0gQjH6DEOPmGXnuMm0m2r2
-        PXigTzJSIuUEf40+yot/aaee9LseJHOu6iqPEsCjb4OYZTHuLE1jLCLlJpM7K+PBm1kkAmUuOl54co75
-        lH00n6F/dbltw7LED3JRkjYa8dksVi7AwM/rBjOjTcySOl8oc6Imk44d9grhbMa4uXbx89mlAoykx1Cb
-        0eFUmi2Isu4oh8dUx13ZVl+x99E4D/1LaeVvjEXQzB+4BU64Iu0CmCh7PcOEU9o9Fwn8oUf6SPFE3635
-        6EfAUca7yjmNqVex+BC2EWV6CE5P4MHC9xv6GYh4zhOcHksapWXRIboBONko0kKDiBuIDWEJptnr1P9g
-        0SG6BSE8jeNthVjCXAbQJja0o1scaWikNDN8xhgZ+R8sztWGf3ryngAAAABJRU5ErkJggg==
-</value>
-  </data>
   <metadata name="bootMeUp1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>74</value>
+    <value>57</value>
   </metadata>
+  <data name="bootMeUp1.Exception" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAEAQAAABBTeXN0ZW0uRXhjZXB0aW9uDAAAAAlDbGFzc05hbWUHTWVzc2Fn
+        ZQREYXRhDklubmVyRXhjZXB0aW9uB0hlbHBVUkwQU3RhY2tUcmFjZVN0cmluZxZSZW1vdGVTdGFja1Ry
+        YWNlU3RyaW5nEFJlbW90ZVN0YWNrSW5kZXgPRXhjZXB0aW9uTWV0aG9kB0hSZXN1bHQGU291cmNlDVdh
+        dHNvbkJ1Y2tldHMBAQMDAQEBAAEAAQceU3lzdGVtLkNvbGxlY3Rpb25zLklEaWN0aW9uYXJ5EFN5c3Rl
+        bS5FeGNlcHRpb24ICAIGAgAAABBTeXN0ZW0uRXhjZXB0aW9uBgMAAABdUGxlYXNlIGVuYWJsZSAnUnVu
+        V2hlbkRlYnVnZ2luZycgdG8gcmVnaXN0ZXIgdGhlIGFwcGxpY2F0aW9uIHdoZW4gcnVubmluZyBmcm9t
+        IFZpc3VhbCBTdHVkaW8uCgoKCgoAAAAACgAVE4AKCgs=
+</value>
+  </data>
 </root>
